[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextlog"
version = "0.1.0"
description = "Inspect and debug Nextflow runs from the filesystem"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "nextlog", email = "dev@nextlog.local" }]
dependencies = [
  "click>=8.1",
  "rich>=13.7",
]

[project.urls]
Homepage = "https://example.com/nextlog"

[project.scripts]
nextlog = "nextlog.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests_nextlog"]
