[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nflog"
version = "0.1.0"
description = "Inspect and debug Nextflow runs from the filesystem"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "nflog", email = "dev@nflog.local" }]
dependencies = [
  "click>=8.1",
  "rich>=13.7",
]

[project.urls]
Homepage = "https://example.com/nflog"

[project.scripts]
nflog = "nflog.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
